--- a/FreeSpeech/res/values/strings.xml
+++ b/FreeSpeech/res/values/strings.xml
@@ -7,5 +7,7 @@
     <string name="title_section1">Chat</string>
     <string name="hello_world">Hello world!</string>
     <string name="menu_settings">Settings</string>
+    <string name="type_message">Type message</string>
+    <string name="send">send</string>
 
 </resources>
