filled the file_transfer.xml and externalized strings

--- a/FreeSpeech/res/values/strings.xml
+++ b/FreeSpeech/res/values/strings.xml
@@ -9,5 +9,8 @@
     <string name="menu_settings">Settings</string>
     <string name="type_message">Type message</string>
     <string name="send">send</string>
+    <string name="choose_a_file_to_send">Choose a file to send</string>
+    <string name="choose_file">Choose file</string>
+    <string name="send_file">Send file</string>
 
 </resources>
